Renamed USE_MALLOC to SNMALLOC_PASS_THROUGH.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -300,7 +300,7 @@ if(NOT DEFINED SNMALLOC_ONLY_HEADER_LIBRARY)
           oe_simulate(${TESTNAME})
         endif()
         if (${SUPER_SLAB_SIZE} STREQUAL "malloc")
-          target_compile_definitions(${TESTNAME} PRIVATE USE_MALLOC)
+          target_compile_definitions(${TESTNAME} PRIVATE SNMALLOC_PASS_THROUGH)
         endif()
         target_link_libraries(${TESTNAME} snmalloc_lib)
         if (${TEST} MATCHES "release-.*")
