Disable Apple again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -280,9 +280,10 @@ if(NOT DEFINED SNMALLOC_ONLY_HEADER_LIBRARY)
   foreach(TEST_CATEGORY ${TEST_CATEGORIES})
     subdirlist(TESTS ${TESTDIR}/${TEST_CATEGORY})
     foreach(TEST ${TESTS})
-      if (WIN32)
+      if (WIN32 OR APPLE)
         # Windows does not support aligned allocation well enough
         # for pass through.
+        # Apple support posix_memalign, but fails to pass the tests.
         set(FLAVOURS 1;16;oe)
       else()
         set(FLAVOURS 1;16;oe;malloc)
