--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -280,9 +280,12 @@ if(NOT DEFINED SNMALLOC_ONLY_HEADER_LIBRARY)
   foreach(TEST_CATEGORY ${TEST_CATEGORIES})
     subdirlist(TESTS ${TESTDIR}/${TEST_CATEGORY})
     foreach(TEST ${TESTS})
-      if (WIN32)
+      if (WIN32
+          OR (CMAKE_SYSTEM_NAME STREQUAL NetBSD)
+          OR (CMAKE_SYSTEM_NAME STREQUAL OpenBSD))
         # Windows does not support aligned allocation well enough
         # for pass through.
+        # NetBSD and OpenBSD do not support malloc*size calls.
         set(FLAVOURS 1;16;oe)
       else()
         set(FLAVOURS 1;16;oe;malloc)
