Add missing clang-format name.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ macro(clangformat_targets)
   # tool.  It does not work with older versions as AfterCaseLabel is not supported
   # in earlier versions.
   find_program(CLANG_FORMAT NAMES
-    clang-format-9)
+    clang-format90 clang-format-9)
 
   # If we've found a clang-format tool, generate a target for it, otherwise emit
   # a warning.
