--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,8 +16,11 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
-
+        rust: [stable, nightly]
     steps:
+    - uses: actions-rs/toolchain@v1
+      with:
+        toolchain: ${{ matrix.rust }}
     - name: Checkout
       uses: actions/checkout@v2
       with:
@@ -25,4 +28,10 @@ jobs:
     - name: Build
       run: cargo build --verbose
     - name: Run tests
-      run: cargo test --verbose
+      run: cargo test --all
+    - name: Run tests 1mib
+      run: cargo test --all --features 1mib
+    - name: Run tests debug
+      run: cargo test --all --features debug
+    - name: Run tests cache-friendly
+      run: cargo test --all --features cache-friendly
