Add -Wconversion to clang builds
MSVC has strong opinions on implicit conversions as used in CI, while Clang both
locally and in CI has weaker opinions.  In an effort to avoid subsequent
roundtrips through CI, make clang more strict.  Adding -Wconversion definitely
increases the strength of clang's opinions, apparently to include frowning on
some that even MSVC considers OK, so go make explicit the current implicit
behavior.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,7 @@ macro(warnings_high)
     add_compile_options(/WX /wd4127 /wd4324 /wd4201)
   else()
     if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-      add_compile_options(-Wsign-conversion)
+      add_compile_options(-Wsign-conversion -Wconversion)
     endif ()
     add_compile_options(-Wall -Wextra -Werror -Wundef)
   endif()
