--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,10 +16,11 @@ readme = "README.md"
 members = ["snmalloc-sys" ]
 
 [dependencies]
-snmalloc-sys = {version = "0.2.25", path = "snmalloc-sys"}
+snmalloc-sys = {version = "0.2.25", path = "snmalloc-sys",default-features = false }
 
 [features]
 default = ["1mib"]
+build_cc = ["snmalloc-sys/build_cc","1mib"]
 1mib = ["snmalloc-sys/1mib"]
 16mib = ["snmalloc-sys/16mib"]
 qemu = ["snmalloc-sys/qemu"]
