--- a/snmalloc-sys/Cargo.toml
+++ b/snmalloc-sys/Cargo.toml
@@ -13,14 +13,17 @@ build = "build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-cc = {version = "1.0.67"}
+cc = {version = "1.0",optional=true}
+cmake = {version = "0.1",optional=true}
+
 
 [dependencies.libc]
 version = "0.2"
 default-features = false
 
 [features]
-default = ["1mib"]
+default = ["1mib","cmake"]
+build_cc = ["cc"]
 1mib = []
 16mib = []
 qemu = []
