--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,5 @@ cache-friendly = ["snmalloc-sys/cache-friendly"]
 android-lld = ["snmalloc-sys/android-lld"]
 android-shared-stl = ["snmalloc-sys/android-shared-stl"]
 native-cpu = ["snmalloc-sys/native-cpu"]
+local_dynamic_tls = ["snmalloc-sys/local_dynamic_tls"]
+
