Add clang-10 64-bit debug C++20 target
Just one C++20 target for the moment, to keep the CI feedback time from getting
too much larger than it already is.

clang-9 refers to C++20 as C++2a, so use clang 10.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,6 +52,14 @@ jobs:
         CMakeArgs: ''
         Image: snmallocciteam/build_linux_x64:latest
 
+      64-bit Clang-10 Debug C++20:
+        CC: clang-10
+        CXX: clang++-10
+        BuildType: Debug
+        SelfHost: false
+        CMakeArgs: '-DSNMALLOC_USE_CXX20=On'
+        Image: snmallocciteam/build_linux_x64:latest
+
       64-bit Clang-9 Release:
         CC: clang-9
         CXX: clang++-9
