add windows support
Signed-off-by: schrodingerzhu <i@zhuyi.fan>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,11 @@ macro(warnings_high)
     else()
       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
     endif()
-    add_compile_options(/WX /wd4127 /wd4324 /wd4201)
+    if (NOT ${CMAKE_CXX_COMPILER_ID} STREQUAL "Intel")
+       add_compile_options(/WX /wd4127 /wd4324 /wd4201)
+    else()
+       add_compile_options(/WX)
+    endif()
   else()
     if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
       add_compile_options(-Wsign-conversion -Wconversion)
@@ -186,7 +190,11 @@ if(CONST_QUALIFIED_MALLOC_USABLE_SIZE)
 endif()
 
 if(${CMAKE_CXX_COMPILER_ID} STREQUAL "Intel")
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -no-inline-max-size -no-inline-max-total-size -diag-disable=2196")
+  if(NOT MSVC)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -no-inline-max-size -no-inline-max-total-size -diag-disable=2196")
+  else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd2586 /Qdiag-disable=280 /Qdiag-disable=3280")
+  endif()
 endif()
 
 
