ci: fix naming for intel compiler
Signed-off-by: schrodingerzhu <i@zhuyi.fan>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -305,14 +305,14 @@ jobs:
     vmImage:  'windows-2019'
   strategy:
     matrix:
-      64-bit Debug Clang:
+      64-bit Debug ICL:
         BuildType: Debug
         CMakeArgs: '-GNinja -DCMAKE_C_COMPILER="icl" -DCMAKE_CXX_COMPILER="icl"'
         JFlag: -j 4
         CompilerURI: "https://registrationcenter-download.intel.com/akdlm/irc_nas/17762/w_HPCKit_p_2021.2.0.2901_offline.exe"
         CompilerPackage: "w_HPCKit_p_2021.2.0.2901_offline.exe"
         CompilerDir: 'C:\Program Files (x86)\Intel\oneAPI'
-      64-bit Release Clang:
+      64-bit Release ICL:
         BuildType: Release
         CMakeArgs: '-GNinja -DCMAKE_C_COMPILER="icl" -DCMAKE_CXX_COMPILER="icl"'
         JFlag: -j 4
