--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -342,6 +342,6 @@ jobs:
 
   - script: |
       set -eo pipefail
-      clang-tidy-9  src/override/malloc.cc  -header-filter="`pwd`/*" -warnings-as-errors='*' -export-fixes=tidy.fail -- -std=c++17 -mcx16
+      clang-tidy-9  src/override/malloc.cc  -header-filter="`pwd`/*" -warnings-as-errors='*' -export-fixes=tidy.fail -- -std=c++17 -mcx16 -DSNMALLOC_PLATFORM_HAS_GETENTROPY=0
 
     displayName: 'Clang-Tidy'
