--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,7 @@ macro(warnings_high)
     else()
       set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
     endif()
-    add_compile_options(/WX /wd4127 /wd4324 /wd4201)
+    add_compile_options(/WX /wd4127 /wd4324 /wd4201 /Wv:18)
   else()
     if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
       add_compile_options(-Wsign-conversion -Wconversion)
