--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -371,9 +371,9 @@ if(NOT DEFINED SNMALLOC_ONLY_HEADER_LIBRARY)
             set_tests_properties(${TESTNAME} PROPERTIES PROCESSORS 4)
           endif()
         endif()
-        if (${TEST_CATEGORY} MATCHES "func")
-          target_compile_definitions(${TESTNAME} PRIVATE -DUSE_SNMALLOC_STATS)
-        endif ()
+        # if (${TEST_CATEGORY} MATCHES "func")
+        #   target_compile_definitions(${TESTNAME} PRIVATE -DUSE_SNMALLOC_STATS)
+        # endif ()
       endforeach()
     endforeach()
   endforeach()
