--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -239,9 +239,9 @@ if(NOT DEFINED SNMALLOC_ONLY_HEADER_LIBRARY)
     add_library(${name} ${type} ${ARGN})
     target_link_libraries(${name} snmalloc_lib)
     if(NOT MSVC)
-      target_compile_definitions(${name} PRIVATE "SNMALLOC_EXPORT=__attribute__((visibility(\"default\")))")
+#      target_compile_definitions(${name} PRIVATE "SNMALLOC_EXPORT=__attribute__((visibility(\"default\")))")
     endif()
-    set_target_properties(${name} PROPERTIES CXX_VISIBILITY_PRESET hidden)
+#    set_target_properties(${name} PROPERTIES CXX_VISIBILITY_PRESET hidden)
 
     if(EXPOSE_EXTERNAL_PAGEMAP)
       if(MSVC)
